--- a/package.json
+++ b/package.json
@@ -9,10 +9,14 @@
     "@headlessui/react": "^1.6.5",
     "@popperjs/core": "2.4.4",
     "next": "latest",
+    "next-seo": "^5.4.0",
+    "postcss-import": "^14.1.0",
     "react": "17.0.2",
     "react-dom": "^17.0.2",
     "react-icons": "^4.4.0",
-    "react-scroll": "^1.8.7"
+    "react-scroll": "^1.8.7",
+    "react-slick": "^0.29.0",
+    "slick-carousel": "^1.8.1"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.7",
