--- a/package.json
+++ b/package.json
@@ -13,9 +13,11 @@
     "postcss-import": "^14.1.0",
     "react": "17.0.2",
     "react-dom": "^17.0.2",
+    "react-fast-marquee": "^1.3.2",
     "react-icons": "^4.4.0",
     "react-scroll": "^1.8.7",
     "react-slick": "^0.29.0",
+    "react-typical": "^0.1.3",
     "slick-carousel": "^1.8.1"
   },
   "devDependencies": {
